fix css alignment on policy details page (#172)

--- a/scss/policy-details-overview.scss
+++ b/scss/policy-details-overview.scss
@@ -18,9 +18,6 @@
   margin-left: -.625rem;
   margin-right: -.625rem;
 
-  &-second-left{
-    display: flex;
-  }
   .overview-content-bottom {
     .table-status-row p {
       font-size: .875rem;
@@ -32,6 +29,15 @@
       h5.section-title{
         padding-left: 0.5rem;
         margin-top: 2rem;
+      }
+
+      .overview-content-second {
+        display: flex;
+        flex-direction: row;
+        .overview-content-second-cell {
+          display: flex;
+          flex-grow: 1;
+        }
       }
 
       .module-container{
